# elsi-interface

./: .elsi.pc.in  .gitignore  .gitlab-ci.yml  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL  INSTALL.md  LICENSE  Makefile  Makefile.am  Makefile.elsi  QUICK_GUIDE  README  README.md  RELEASE_NOTES  USER_GUIDE  autogen.sh  config-example  config-example.txt  configure.ac  download-ELSI-timewarp.sh  make.sys  make.sys-edison  make.sys-marenostrum  make.sys-mira  make.sys-mira-xlf  make.sys-mira-xlf-unfinishes  make.sys-timewarp  make.sys-timewarp-debug  make.sys-vama  upload-ELSI-marenostrum.sh  upload-ELSI-timewarp.sh
ELSI/example/: Makefile.am  construct_and_write_elpa.f90  construct_and_write_omm.f90  read_and_solve_elpa.f90  read_and_solve_omm.f90  read_and_solve_pexsi.f90  read_and_write_elpa.f90  read_and_write_omm.f90  read_and_write_pexsi.f90  set_and_convert_pexsi.f90  set_and_write_elpa.f90  set_and_write_omm.f90
ELSI/src/: Makefile  Makefile.am  Makefile.elsi  construct_and_write.f90  dimensions.f90  elsi-interchange.f90  elsi.f90  elsi_chess.f90  elsi_dimensions.f90  elsi_elpa.f90  elsi_hdf5_tools.f90  elsi_interface.f90  elsi_interface.wrapper.f90  elsi_matrix_conversion.f90  elsi_mpi_tools.f90  elsi_omm.f90  elsi_pexsi.f90  elsi_timers.f90  elsi_timings.f90  elsi_utils.f90  hdf5_tools.f90  make.sys  mpi_tools.f90  read_and_solve.f90  read_and_write.f90  readwrite.f90  set_and_write.f90  stub_omm.f90  stub_pexsi.f90  write.f90
src/: CMakeLists.txt  Makefile.elsi  elsi.h  elsi_aeo.f90  elsi_bsepack.f90  elsi_c2f.f90  elsi_c_interface.f90  elsi_chess.f90  elsi_constant.f90  elsi_constants.f90  elsi_datatype.f90  elsi_decision.f90  elsi_dmp.f90  elsi_eigenexa.f90  elsi_elpa.f90  elsi_geo.f90  elsi_get.f90  elsi_input.f90  elsi_interface.f90  elsi_inverse_slate.f90  elsi_io.f90  elsi_json.f90  elsi_lapack.f90  elsi_magma.f90  elsi_malloc.f90  elsi_mat_io.f90  elsi_mat_redist.f90  elsi_matconv.f90  elsi_matio.f90  elsi_mpi.f90  elsi_mpifh.f90  elsi_mu.f90  elsi_mutator.f90  elsi_ntpoly.f90  elsi_occ.f90  elsi_omm.f90  elsi_output.f90  elsi_pexsi.f90  elsi_precision.f90  elsi_redist.f90  (+19 more)
src/ELPA/: CMakeLists.txt  Makefile.elsi  README.md
src/ELPA/elpa/: elpa_generated_fortran_interfaces.h
src/ELPA/src/: aligned_mem.f90  check_for_gpu.F90  check_singularity.F90  cuUtils_complex_template.Xcu  cudaFunctions.cu  elpa1.F90  elpa1_auxiliary.F90  elpa1_compute_complex_template.X90  elpa1_compute_private.F90  elpa1_compute_private.f90  elpa1_solve_tridi_real_template.X90  elpa1_trans_ev_complex_template.X90  elpa1_trans_ev_real_template.X90  elpa1_tridiag_complex_template.X90  elpa1_tridiag_real_template.X90  elpa1_utilities.F90  elpa2.F90  elpa2_compute.F90  elpa2_compute_complex_template.X90  elpa2_compute_real_template.X90  elpa2_kernels_complex_avx_1hv.c  elpa2_kernels_real_avx2_2hv.c  elpa2_kernels_real_avx_2hv.c  elpa2_kernels_real_bgq.f90  elpa2_utilities.F90  elpa2_utilities_avx2.f90  elpa2_utilities_avx512.f90  elpa_pdlarfb.f90  elpa_reduce_add_vectors.X90  elpa_transpose_vectors.X90  elpa_utilities.F90  elpa_utilities.f90  ev_tridi_band_gpu_c_v2.cu  ev_tridi_band_gpu_c_v2_complex_template.Xcu  ev_tridi_band_gpu_c_v2_real_template.Xcu  interface_c_kernel.F90  mod_compute_hh_trafo_complex.F90  mod_compute_hh_trafo_complex_avx2.f90  mod_compute_hh_trafo_complex_sse.f90  mod_compute_hh_trafo_real.F90  (+11 more)
src/ELSI/: CMakeLists.txt  Makefile.elsi  make_check.sh  make_checkc.sh  make_checkf.sh
src/ELSI/c_binding/: c_to_f_converters.f90  elsi.h  elsi_c2f.f90  elsi_c_interface.f90  tomato.h  tomato_c_interface.f90
src/ELSI/doc/: doxyfile  mainpage.md
src/ELSI/py_binding/: Makefile  elsi_python.f90  pyelsi_random_mat.py  tomato_python.f90
src/ELSI/src/: elsi.h  elsi_aeo.f90  elsi_c_interface.f90  elsi_chemical_potential.f90  elsi_chess.f90  elsi_constants.f90  elsi_datatype.f90  elsi_dimensions.f90  elsi_dmp.f90  elsi_elpa.f90  elsi_elpa_api.f90  elsi_interface.f90  elsi_io.f90  elsi_lapack.f90  elsi_malloc.f90  elsi_matconv.f90  elsi_matio.f90  elsi_matrices.f90  elsi_matrix_conversion.f90  elsi_mpi.f90  elsi_mu.f90  elsi_mutator.f90  elsi_omm.f90  elsi_pexsi.f90  elsi_precision.f90  elsi_setup.f90  elsi_sips.f90  elsi_solver.f90  elsi_sort.f90  elsi_timers.f90  elsi_timings.f90  elsi_utils.f90  elsi_version_module_writer.pl  elsi_version_writer.pl  make_check.sh  stub_chess.f90  stub_omm.f90  stub_pexsi.f90  stub_sips.f90
src/ELSI/test/: CMakeLists.txt  H_complex.csc  H_real.csc  (+24 more)
src/PEXSI/: CMakeLists.txt  DoxygenLayout.xml  Makefile.elsi  make.inc
src/SIPs/: CMakeLists.txt  LICENSE  Makefile.elsi
src/check_singularity/: Makefile.elsi  README.md
src/include/: CMakeLists.txt
src/libOMM/: CMakeLists.txt  Makefile.elsi
test/: CMakeLists.txt  Makefile.elsi
test/C/: elsi_test_c.c  test_dm_cmplx_den_c.c  test_dm_complex_c.c  test_dm_real_c.c  test_dm_real_den_c.c  test_ev_cmplx_den_c.c  test_ev_complex_c.c  test_ev_real_c.c  test_ev_real_den_c.c
test/Fortran/: elsi_test.f90  elsi_test_rw.f90  test_bse_cmplx_den.f90  test_bse_real_den.f90  test_dm_cmplx_coo.f90  test_dm_cmplx_csc1.f90  test_dm_cmplx_csc2.f90  test_dm_cmplx_den.f90  test_dm_complex.f90  test_dm_complex_sparse.f90  test_dm_kpt_spin_cmplx_den.f90  test_dm_kpt_spin_complex.f90  test_dm_real.f90  test_dm_real_coo.f90  test_dm_real_csc1.f90  test_dm_real_csc2.f90  test_dm_real_den.f90  test_dm_real_sparse.f90  test_ev_cmplx_coo.f90  test_ev_cmplx_csc1.f90  test_ev_cmplx_csc2.f90  test_ev_cmplx_den.f90  test_ev_complex.f90  test_ev_complex_sparse.f90  test_ev_real.f90  test_ev_real_coo.f90  test_ev_real_csc1.f90  test_ev_real_csc2.f90  test_ev_real_den.f90  test_ev_real_sparse.f90  test_occ_non_aufbau.f90  test_occ_normal.f90  test_rw_cmplx.f90  test_rw_complex.f90  test_rw_real.f90  test_standard_ev_real.f90  test_std_ev_real_den.f90
test/matrices/: A_cmplx.csc  A_real.csc  B_cmplx.csc  B_real.csc  B_real_int4.csc  H_cmplx.csc  H_cmplx_int4.csc  H_real.csc  H_real_int4.csc  S_cmplx.csc  S_cmplx_int4.csc  S_complex.csc  S_real.csc
test/python/: README  elsi_io_test.py
(+406 files in other folders)
